# st-dns

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  area-ips.py  cmake_install.cmake  country-ips.py  install.sh  st-dns.json  uninstall.sh
.claude/: settings.json
area-ips/: AM  AQ  AS  BL  BN  BW  CG  CH  CN  CW  CY  DE  DZ  ET  FM  GE  GH  GN  HK  IM  IR  JE  KH  KM  KN  KR  LA  LAN  LI  LS  MQ  MS  MT  NE  NG  NO  OM  PY  RE  RS  (+12 more)
confs/: .gitignore  st-dns.json  test-confs.sh
confs/area-ips/: AL  AT  BA  BD  BE  BG  BT  BZ  CD  CL  CN  DM  EC  EE  ER  FI  FO  GF  GL  GT  IL  IN  KE  KY  KZ  LAN  LV  MC  MG  MH  MK  ML  MM  MN  MR  NC  NF  NL  NP  NU  (+19 more)
confs/darwin/: config-example.json  st-dns.json
confs/darwin/service/: com.codingdie.st.dns.plist  start.sh  stop.sh
confs/linux/: config-example.json  st-dns.json
confs/linux/service/: st-dns  start.sh  stop.sh
confs/macos/: com.codingdie.st.dns.plist
confs/openwrt/: config-example.json  st-dns.json
confs/openwrt/service/: st-dns  start.sh  stop.sh
confs/test/: .gitignore  config.json
confs/test/domains/: CN  OVERSEA
confs/test/service/: st-dns.service
confs/whitelist/: 114_114_114_114_53
country-ips/: AD  AE  AF  AG  AI  AO  AR  AU  AW  AX  AZ  BB  BF  BH  BI  BJ  BM  BO  BQ  BR  BS  BY  CA  CF  CI  CK  CM  CO  CR  CU  CV  CZ  DJ  DK  DO  EG  ES  FJ  FK  FR  (+91 more)
docs/: ARCHITECTURE.md  FEATURES.md
docs/features/: F001-2026-02-15.md  TEMPLATE.md
src/: DNSServer.cpp  DNSServer.h  LogUtils.cpp  LogUtils.h  main.cpp
src/common/kv/: abstract_kv.h  disk_kv.cpp  disk_kv.h  shm_kv.cpp  shm_kv.h
src/common/main/: st.h
src/common/main/command/: dns_command.h  proxy_command.h
src/common/main/console/: client.h  udp_console.cpp  udp_console.h
src/common/main/kv/: abstract_kv.h  disk_kv.cpp  disk_kv.h  kv.h  shm_kv.cpp  shm_kv.h
src/common/main/proto/: kv.pb.cc  kv.pb.h  kv.proto
src/common/main/taskquque/: task_queue.h
src/common/main/thirdpart/: httplib.h
src/common/main/utils/: area_ip.cpp  area_ip.h  base64.h  dns.h  file.h  http.h  ipv4.h  logger.cpp  logger.h  median_counter.h  moment.h  pool.cpp  pool.h  string_utils.h
src/common/main/utils/shm/: dns_shm.cpp  dns_shm.h  proxy_shm.cpp  proxy_shm.h
src/common/proto/: kv.pb.cc  kv.pb.h  kv.proto
src/common/test/: unit_tests.cpp
src/common/utils/: AreaIPUtils.cpp  AreaIPUtils.h  AreaIpManager.cpp  AreaIpManager.h  Base64Utils.h  ByteUtils.h  DNSReverseSHM.cpp  DNSReverseSHM.h  DNSUtils.h  DnsSHM.cpp  DnsSHM.h  FileUtils.h  IPUtils.h  IntervalCounter.h  Logger.cpp  Logger.h  Pool.cpp  Pool.h  SHM.cpp  SHM.h  STUtils.h  ShellUtils.h  StringUtils.h  TimeUtils.h  area_ip.cpp  area_ip.h  asio.h  avg_counter.h  base64.h  byte.h  dns.h  file.h  interval_counter.h  ipv4.h  logger.cpp  logger.h  median_counter.h  pool.cpp  shell.h  utils.h
src/common/utils/asio/: STUtils.h
src/common/utils/shm/: dns_shm.cpp  dns_shm.h  kv.cpp  kv.h  proxy_shm.cpp  proxy_shm.h
src/core/: Config.cpp  Config.h  DNSClient.cpp  DNSClient.h  DNSMessage.h  DNSOverTcpProxy.h  DNSRequest.cpp  DNSRequest.h  DNSServer.cpp  DNSServer.h  TCPSession.h  config.cpp  config.h  console_manager.cpp  console_manager.h  dns_cache.cpp  dns_cache.h  dns_client.cpp  dns_client.h  dns_record_manager.cpp  dns_record_manager.h  dns_server.cpp  dns_server.h  main.cpp  session.cpp  session.h  session_manager.cpp  session_manager.h
src/core/dns/: AreaIpManager.cpp  AreaIpManager.h  Config.cpp  Config.h  CountryIpManager.cpp  CountryIpManager.h  DNSCache.cpp  DNSCache.h  DNSClient.cpp  DNSClient.h  DNSOverTcpProxy.cpp  DNSOverTcpProxy.h  DNSReverseSHM.h  DNSServer.cpp  DNSServer.h  DNSSession.cpp  DNSSession.h  LauchedUtils.h  LogUtils.cpp  LogUtils.h  Logger.cpp  Logger.h  RemoteDNSServer.cpp  RemoteDNSServer.h  TCPSession.cpp  TCPSession.h  config.cpp  config.h  dns_cache.cpp  dns_cache.h  dns_client.cpp  dns_server.cpp  dns_server.h  session.cpp  session.h
src/core/dns/protocol/: DNSMessage.cpp  DNSMessage.h  protocol.h  request.cpp  request.h  response.cpp  response.h
src/core/protocol/: dns_message.cpp  dns_message.h  message.pb.cc  message.pb.h  message.proto  protocol.h  request.cpp  response.cpp  response.h
src/core/protocol/dns/: DNS.h  DNSMessage.cpp  DNSMessage.h  DNSRequest.cpp  DNSRequest.h  DNSResponse.cpp  DNSResponse.h  DnsRequest.cpp  DnsRequest.h
src/core/utils/: Base64Utils.h  ByteUtils.h  FileUtils.h  IPUtils.h  Logger.cpp  Logger.h  Pool.h  STUtils.h  ShellUtils.h  StringUtils.h  TimeUtils.h  Utils.h
src/core/utils/asio/: STUtils.h  TLIOContext.cpp  TLIOContext.h
src/core/whois/: WhoisClient.cpp  WhoisClient.h
src/server/: main.cpp
src/test/: main.cpp
src/test/integration/: IntegrationTests.cpp  cache_integration_test.cpp  dns_server_test.cpp  integration_test_base.h
src/test/unit/: UnitTests.cpp  cache_management_test.cpp  dns_client_test.cpp  reverse_resolve_test.cpp  server_selection_test.cpp  unit_tests.cpp
